--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "nodemailer": "^6.6.0",
     "nodemon": "^2.0.7",
     "randomstring": "^1.1.5"
+
+  },
+  "engines":{
+    "node":"14.16.0"
   }
 }
